@@ -4,6 +4,8 @@
 	cd ~/nco;git commit -a -m 'Version 5.3.3-alpha02: Toyota Matrix';git push
 	git tag -a 5.3.3-alpha02 -m 'fxm';git push --tags
 
+	* nco_ppc.c: nco_ppc_bitmask() protect all quantization algorithms from modifying negative zero and NaN
+
 	* ncks: Add --fpe to test floating point exceptions
 
 2025-02-08  Charlie Zender  <zender@uci.edu>
